changed the cdn url, using additional address for exposed VM on the network, halting the installation after first boot to remove the USB device

--- a/demos/upgrade-and-rollback/vars/main.yml
+++ b/demos/upgrade-and-rollback/vars/main.yml
@@ -4,14 +4,14 @@ rhc_state: present
 
 apps:
   app1:
-    registry: quay.io/luisarizmendi
+    registry: docker.io/lucamaf
     image: 2048
     prodtag: prod
   app2:
-    registry: quay.io/luisarizmendi
+    registry: docker.io/lucamaf
     image: simple-http
     prodtag: prod
 
 system:
   hostname: "demo-upgrade"
-  cdn_rhel_iso: "https://cdn.redhat.com/content/dist/rhel9/9/x86_64/baseos/iso/rhel-baseos-9.1-x86_64-boot.iso"
+  cdn_rhel_iso: "https://cdn.redhat.com/content/dist/rhel9/9/x86_64/baseos/iso/rhel-9.2-x86_64-boot.iso"
