modifying node-ip for device with multiple if

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 common/templates/inject-kernel-arg.j2.bak
 demos/upgrade-and-rollback/playbooks/00-preparation-ostree.yml.bak
+.vscode/settings.json
